# libtask

./: CMakeLists.txt
.github/scripts/: install-build-deps.sh
.github/workflows/: build.yml
apps/: CMakeLists.txt
apps/bandwidth/: CMakeLists.txt  bandwidth-main.cpp  bandwidth.cpp  bandwidth.h
apps/cannon/: CMakeLists.txt  cannon-main.cpp  cannon.cpp
apps/graph/: CMakeLists.txt  graph-main.cpp  graph.cpp  nxgraph.hpp
apps/jacobi/: CMakeLists.txt  jacobi-main.cpp  jacobi.cpp
apps/nested-vadd/: CMakeLists.txt  vadd-main.cpp  vadd.cpp
apps/network/: CMakeLists.txt  network-main.cpp  network.cpp
apps/shared-vadd/: CMakeLists.txt  vadd-main.cpp  vadd.cpp
apps/vadd/: CMakeLists.txt  vadd-main.cpp  vadd.cpp
src/: task.cpp  task.h
src/task/: coroutine.h  mmap.h  parallel.h  stream.h  traits.h  util.h  vec.h
